# infmax-trainer-icm-mln

./: .env-example  .gitignore  .gitmodules  Dockerfile  README.md  infmax_test.py  multi_node2vec.py  pyproject.toml  requirements.txt  run.ipynb  run_evaluation.py  run_experiments.py  seed_selection.ipynb
_configs/: 766_ones_and.yaml  766_ones_or.yaml  767_ones_and.yaml  767_ones_or.yaml  MN2VKM.yaml  MN2VKMA.yaml  a_att.yaml  a_avg.yaml  a_domain.yaml  a_linear.yaml  a_max.yaml  a_min.yaml  a_sum.yaml  att_cont_log_and.yaml  att_cont_log_or.yaml  att_cont_norm_and.yaml  att_cont_norm_or.yaml  att_max_and.yaml  att_max_or.yaml  att_norm_scatt_and.yaml  att_norm_scatt_or.yaml  best_or.yaml  config_and.yaml  config_or.yaml  e_variant_c.yaml  e_variant_d.yaml  e_variant_e.yaml  e_variant_f.yaml  e_variant_g.yaml  e_variant_h.yaml  e_variant_j.yaml  evaluation.yaml  f_cent.yaml  f_ones.yaml  f_zeros.yaml  gat_hetero_gnn.yaml  h_200.yaml  h_400.yaml  h_600.yaml  h_800.yaml  (+37 more)
env/: conda.yaml  requirements.txt
infmax_models/: __init__.py  loader.py  multi_node2vec_kmeans.py
infmax_models/multi_node2vec/: multi_node2vec.py
infmax_models/multi_node2vec_kmeans/: __init__.py  k_means.py  multi_node2vec_kmeans.py
infmax_models/utils/: __init__.py  k_means.py
misc/: constants.py  net_loader.py  sp_loader.py
multi_node2vec/: README.md  multi_node2vec.py
seed_selection/: k_means.py
src/: __init__.py  data_loader.py  data_module.py
src/utils/: misc.py  (+5 more)
ss_models/: __init__.py  loader.py  multi_node2vec_kmeans.py  multinode2vec_kmeans.py
trainers/: eval.py  train.py
(+82 files in other folders)
